2008-07-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test/common.py:
	* test/expected/test_zope_interface:
	* test/input/test_zope_interface.py:
	* test/main.py:
	* test/test_stdlib.py:
	  Add a first stab at a unittest-based testsuite.
	  Add a test for bug #382217 that I wanted to fix that can't
	  be tested in the current test suite.

2008-07-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_input/test86.py:
	  Add a test for except KeyboardInterrupt, which was fixed by Neil
	  in pychecker/CodeChecks.py: 1.170 on 23-Apr-07.

2008-07-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  Allow using setattr with a static argument inside lambda calls,
	  where the alternative is a syntax error since you're not allowed to
	  do an assignment expression.
	  Fixes #1565876.

2008-07-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  Revert IDLE patch which breaks test42.py
	  See #2007203.

2008-07-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	* pychecker/warn.py:
	  Respect the blacklist of modules when warning about classes for
	  which the module cannot be found.
	* test_check.sh:
	* test_expected/test101:
	* test_input/test101.py:
	  Add a test for it.
	  Fixes #1563495.

2008-07-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test100:
	* test_input/test100.py:
	  Actually add the tests.

2008-06-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/checker.py:
	  If an object looks like a class object because it has __bases__
	  but it does not have __names__, make up a name.
	  Fixes #1563494.
	* test_check.sh:
	  Add a test that previously failed.

2008-06-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* MANIFEST.in:
	* CHANGELOG:
	* NEWS:
	  Moved CHANGELOG to NEWS since it really contains release news.
	  Created real ChangeLog.
